--- a/index.html
+++ b/index.html
@@ -11,12 +11,11 @@
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;1,400&family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,400&display=swap" rel="stylesheet">
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Martel:wght@300&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Martel:wght@300&family=Source+Sans+3:ital,wght@0,400;1,600&family=Source+Serif+Pro:wght@400;600&display=swap');
     </style>
 </head>
 
 <body>
-
     <div id="map"></div>
     <div id='story'></div>
     <script src='config.js'></script>
