--- a/index.html
+++ b/index.html
@@ -112,6 +112,8 @@
         <p>They are among the <a href='https://www.audubon.org/climate/survivalbydegrees''>two-thirds of bird species</a> under threat by climate change in North America. But recently, scientists have found that a certain amount of sea-level rise and hurricanes may benefit the shorebirds.</p>
         <p>From 2013 to 2018, Robinson’s Virginia Tech team captured and banded 152 adults and 353 chicks on the Fire and Westhampton barrier islands in New York. It’s part of a series of studies on how piping plovers reacted to the habitat change spurred by Hurricane Sandy nine years ago. As strong winds removed vegetation and expanded the beachy area, new habitats suitable for piping plovers were created. But scientists also pointed out that artificial facilities are hindering barrier islands from natural movement.</p>
         <p>In late March, piping plovers will fly via the Atlantic Flyway to breed on the beaches of New York and Connecticut. They will nest in the soft, sandy area with sparse vegetation along the shores.</p>
+        <p><img src="images/Atlantic-flyway.jpg"></p>
+        <p class="imageCredit">Source: <a href="https://www.audubon.org/birds/flyways?ms=digital-acq-ppc-google-x-20190000_google_grant&gclid=CjwKCAjw0dKXBhBPEiwA2bmObXplokyOOWEgPSYJatLImlZGWQlkP3Ab0FuReRF3-RnRvK5E0nHoMBoCwpEQAvD_BwE">National Audubon Society</a></p>
         <p>In the late 18th century, plovers were the popular target of hunters. Their feathers were used for decoration on hats and clothes. With the Migratory Bird Treaty Act of 1918, they were under protection and their population increased until 1950. Due to habitat loss, as more beaches were developed for recreation, the number began to decline again. </p>
         <p>In 1985, the Atlantic Coast and Northern Great Plains populations were listed as threatened, and the population in the Great Lakes watershed was listed as endangered, according to <a href='https://www.fws.gov/species/piping-plover-charadrius-melodus'>US Fish & Wildlife Service</a>.</p>
     </div>
@@ -501,12 +503,20 @@ window.addEventListener("resize", scroller3.resize);
     <script src='config.js'></script>
     <script src="./map.js"></script>
     <div class="main-container">
-      <p class="firstpara">After conducting more than ten outreach events this summer, Casas planned to sort and analyze data. Next year, the result of the disturbance data collection survey will be available.</p>
+      <h1>Sharing the shore and the planet</h1>
+      <p>After conducting more than ten outreach events this summer, Casas planned to sort and analyze data. Next year, the result of the disturbance data collection survey will be available.</p>
       <p>Ramirez is considering pursuing her master's degree in community psychology. She realizes it’s important to engage the public and persuade them to change their behavior.</p>
       <p>Robinson has a new role to play, the Program Manager of the Delaware Department of Natural Resources and Environmental Control. From a researcher to an officer, she wanted to connect science and management better and make a difference.</p>
       <p>The piping plover is an indicator, helping scientist to get a sense of the coastal ecosystem under climate change and human disturbance.  And it’s not the only shorebird species under the threat.</p>
-      <p><img src="images/barnegat-light.png"></p>
-      <p class='imageCredit'>In Barnegat Light, New Jersey, a habitat restoration project was conducted to remove the vegetation and create shallow pond starting in 2018. (Photo from NY Audubon)</p>
+      <div class="row">
+        <div class="column">
+          <img src="images/project-before.png" style="width:100%">
+        </div>
+        <div class="column">
+          <img src="images/project-after.png" style="width:100%">
+        </div>
+      </div>
+      <p class='imageCredit'>In Barnegat Light, New Jersey, a habitat restoration project was conducted to remove the vegetation and create shallow pond starting in 2018. (Photo from <a href='https://www.youtube.com/watch?v=h8Dd9oeXb-0'>New Jersy Department of Environmental Protection</a>)</p>
       <p>After conducting more than ten outreach events this summer, Casas planned to sort and analyze data. Next year, the result of the disturbance data collection survey will be available.</p>
       <p>“I do think that birds are a good entry point for the average person into the challenges that the natural world faces with climate change.” Scott Weidensaul said, who is the author of <span style="font-style: italic">A World on the Wing</span>, and an ornithologist focusing on migratory birds.</p>
       <p>In Connecticut and New York, piping plovers and boat-tailed grackles are listed as high climate-vulnerable species, according to the <a href='https://www.audubon.org/climate/survivalbydegrees'>National Audubon Survival by Degree Report</a>. Further sea level rise could permanently consume coastal habitats.</p>
@@ -515,11 +525,10 @@ window.addEventListener("resize", scroller3.resize);
       <p><img src='images/americanOystercatcher.jpg'></p>
       <p class='imageCredit' style="padding-bottom:100px"> An American Oystercatcher and two piping plovers, Rockaway Beach, Aug 4, 2022 (Photo by Chuqin Jiang)</p>
     </div>
-    <div class="main-container">
-      <div id="footer-box">
-        <p>This map is based on data by the <a href="https://science.ebird.org/en/status-and-trends/download-data">eBird</a> and is for the MS Data Journalism degree for <a href="https://journalism.columbia.edu/">Columbia Journalism School</a>.</p>
+    <div id="footer-box">
+        <p>This map is based on data by the <a href="https://science.ebird.org/en/status-and-trends/download-data">eBird</a>, <a href="https://earthworks.stanford.edu/catalog/stanford-jp095bg5089">US Department of Housing and Urban Development</a>, <a href="https://www2.census.gov/geo/tiger/GENZ2020/shp/cb_2020_us_state_5m.zip">Census TIGER</a> and is for the MS Data Journalism degree for <a href="https://journalism.columbia.edu/">Columbia Journalism School</a>.</p>
+        <p>Special thanks to Larry Buchanan, Michael Krisch, Sara Zeigler and all other sources.</p>
         <p><a href="https://www.mapbox.com/about/maps/" target="_blank">© Mapbox</a> | <a href="http://www.openstreetmap.org/about/" target="_blank">© OpenStreetMap</a></p>
-      </div>
-    </div>  
+    </div> 
 </body>
 </html>
