--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <p>JYJ is a piping plover, named after the number on his banded flag that researchers gave him seven years ago. He was never trapped again by humans afterwards. </p>
         <p>“Every plover is different,” Robinson said. She started studying piping plovers and other shorebirds as a part of a Virginia Tech team in 2016. </p>
         <p>“You have plovers that are gonna stick right next to their nest and let you know that they’re upset with whatever you’re doing right in your face, and there are other ones that all go fly away and hide and you'll never see them again.” </p>
-        <p>Piping plovers are brownish-grey shore birds with a round body. Their orange legs and orange black-tipped bill is the key to distinguishing them from other plovers. As a conservation-reliant species, which means their survival depends on active human management, piping plovers are in need of scientists’ monitoring, as well as the public’s cooperation.</p>
+        <p>Piping plovers are brownish-grey shore birds with round bodies. Their orange legs and orange black-tipped bill are the keys to distinguishing them from other plovers. As a conservation-reliant species, which means their survival depends on active human management, piping plovers are in need of scientists’ monitoring, as well as the public’s cooperation.</p>
         <p>They are among the <a href='https://www.audubon.org/climate/survivalbydegrees''>two-thirds of bird species</a> under threat by climate change in North America. But recently, scientists have found that a certain amount of sea-level rise and hurricanes may benefit the shorebirds.</p>
         <p>From 2013 to 2018, Robinson’s Virginia Tech team captured and banded 152 adults and 353 chicks on the Fire and Westhampton barrier islands in New York. It’s part of a series of studies on how piping plovers reacted to the habitat change spurred by Hurricane Sandy nine years ago. As strong winds removed vegetation and expanded the beachy area, new habitats suitable for piping plovers were created. But scientists also pointed out that artificial facilities are hindering barrier islands from natural movement.</p>
         <p>In late March, piping plovers will fly via the Atlantic Flyway to breed on the beaches of New York and Connecticut. They will nest in the soft, sandy area with sparse vegetation along the shores.</p>
@@ -507,7 +507,7 @@ window.addEventListener("resize", scroller3.resize);
       <p>After conducting more than ten outreach events this summer, Casas planned to sort and analyze data. Next year, the result of the disturbance data collection survey will be available.</p>
       <p>Ramirez is considering pursuing her master's degree in community psychology. She realizes it’s important to engage the public and persuade them to change their behavior.</p>
       <p>Robinson has a new role to play, the Program Manager of the Delaware Department of Natural Resources and Environmental Control. From a researcher to an officer, she wanted to connect science and management better and make a difference.</p>
-      <p>The piping plover is an indicator, helping scientist to get a sense of the coastal ecosystem under climate change and human disturbance.  And it’s not the only shorebird species under the threat.</p>
+      <p>The piping plover is an indicator, helping scientists to get a sense of the coastal ecosystem under climate change and human disturbance.  And it’s not the only shorebird species under threat.</p>
       <div class="row">
         <div class="column">
           <img src="images/project-before.png" style="width:100%">
@@ -516,12 +516,11 @@ window.addEventListener("resize", scroller3.resize);
           <img src="images/project-after.png" style="width:100%">
         </div>
       </div>
-      <p class='imageCredit'>In Barnegat Light, New Jersey, a habitat restoration project was conducted to remove the vegetation and create shallow pond starting in 2018. (Photo from <a href='https://www.youtube.com/watch?v=h8Dd9oeXb-0'>New Jersy Department of Environmental Protection</a>)</p>
-      <p>After conducting more than ten outreach events this summer, Casas planned to sort and analyze data. Next year, the result of the disturbance data collection survey will be available.</p>
+      <p class='imageCredit'>In Barnegat Light, New Jersey, a habitat restoration project was conducted to remove the vegetation and create a shallow pond starting in 2018. (Photo from <a href='https://www.youtube.com/watch?v=h8Dd9oeXb-0'>New Jersy Department of Environmental Protection</a>)</p>
       <p>“I do think that birds are a good entry point for the average person into the challenges that the natural world faces with climate change.” Scott Weidensaul said, who is the author of <span style="font-style: italic">A World on the Wing</span>, and an ornithologist focusing on migratory birds.</p>
       <p>In Connecticut and New York, piping plovers and boat-tailed grackles are listed as high climate-vulnerable species, according to the <a href='https://www.audubon.org/climate/survivalbydegrees'>National Audubon Survival by Degree Report</a>. Further sea level rise could permanently consume coastal habitats.</p>
-      <p>“And they are going to be facing an increasingly difficult battle of having their nest survive as the intensity of storms increase,” said Dustin Partridge, the director of Science and Conservation at Audubon’s New York chapter, a community that works for the protection of wild birds and habitat.</p>
-      <p>Partridge said these birds lack attention because people are always thinking about urban birds in Central Park. But it’s also important to look at the shores. The city is, after all,  largely islands.</p>
+      <p>“And they are going to be facing an increasingly difficult battle of having their nest survive as the intensity of storms increase,” said Dustin Partridge, the director of Science and Conservation at Audubon’s New York chapter.</p>
+      <p>Partridge said these birds lack attention because people are always thinking about urban birds in Central Park. But it’s also important to look at the shores. The city is, after all, largely islands.</p>
       <p><img src='images/americanOystercatcher.jpg'></p>
       <p class='imageCredit' style="padding-bottom:100px"> An American Oystercatcher and two piping plovers, Rockaway Beach, Aug 4, 2022 (Photo by Chuqin Jiang)</p>
     </div>
