Delete the intro div

--- a/index.html
+++ b/index.html
@@ -20,12 +20,14 @@
 </head>
 <body>
     <main>
+     <!-- 
         <section id="scrolly">
           <div class="sticky-thing">
             <h3></h3>
           </div>
   
           <article>
+
             <div class="step" data-step="1" data-bg="url(images/scroll-1/adult.png)" data-tx="">
               <p>This is a piping plover parent. They love nesting on sandy ocean and lake shores. Every year, they travel hundreds of miles between wintering and breeding sites.</p>
             </div>
@@ -38,7 +40,8 @@
             <div class="step" data-step="4" data-bg="url(images/scroll-1/real-pic.png)" data-tx="Photo by USGS">
               <p>Besides human disturbance, some experts believe that climate change may consume parts of their habitats permanently; while others find that, counterintuitively, extreme weather is not necessarily bad news.</p>
             </div>
-            <div class="step lastone" data-step="5" data-bg="url(images/frontpage.jpg)" data-tx="Photo by Chuqin Jiang ">
+
+            <div class="step" data-step="1" data-bg="url(images/frontpage.jpg)" data-tx="Photo by Chuqin Jiang ">
               <div class='title-container'>
                 <div class='image-text'>
                     <h4>Climate | Bird </h4>
@@ -47,15 +50,13 @@
                       .</h1>
                     <p class='byline'>By Chuqin Jiang</p>
                 </div>
-            </div>
+              </div>
             </div>
           </article>
-        </section>
-  
+        </section> 
         <section id="outro"></section>
     </main>
-  
-      <!-- <div class='debug'></div> -->
+    <div class='debug'></div> -->
       <script src="https://unpkg.com/intersection-observer@0.5.1/intersection-observer.js"></script>
       <script src="https://unpkg.com/scrollama"></script>
       <script>
@@ -103,6 +104,18 @@
         // kick things off
         init();
       </script>
+    
+    <div class="front-page">
+      <div class='title-container'>
+        <div class='image-text'>
+            <h4>Climate | Bird </h4>
+            <h1>Shorebirds' Revival</h1>
+            <h2>Extreme weather may benefit shorebirds, but humans make it complicated. 
+              .</h1>
+            <p class='byline'>By Chuqin Jiang</p>
+        </div>
+      </div>
+    </div>
     <div class='main-container'>
         <p class="firstpara">When Samantha Robinson saw “JYJ” from a mile away in a spotting scope, she knew he would turn away soon, as he always did. He was shy and evasive, always avoiding humans.</p>
         <p>JYJ is a piping plover, named after the number on his banded flag that researchers gave him seven years ago. He was never trapped again by humans afterwards. </p>
